btn color chnage

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -10,8 +10,8 @@
   --font-code: "Roboto", monospace;
   --bg-color: #040404;
   --bg-color-transparent: #00163f80;
-  --font-color: #ffffff;
-  --btn-bg-color: #ffffff;
+  --font-color: #b09705;
+  --btn-bg-color: #b09705;
   --accent-color: #060606f7;
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
